completed base mode

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,11 @@
         <input type="number" id="firstNumber">
         <input type="number" id="secondNumber">
         <button class="operButton" data-oper="add">Add</button>
+        <button class="operButton" data-oper="subtract">Subtract</button>
+        <button class="operButton" data-oper="multiply">Multiply</button>
+        <button class="operButton" data-oper="divide">Divide</button>
+        <br>
+        <button id="clearButton">CLEAR</button>        
     </div>
     <div>
         <p>The result is: <span id="result">0</span></p>
